--- a/src/styles.css
+++ b/src/styles.css
@@ -2,12 +2,13 @@
 
 html, body {
   height: 100%;
+  background-color: rgb(43, 43, 59);
 }
 .nav {
+  background-color: rgb(30, 30, 43);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  box-shadow: 0px 2px gray;
 }
 .nav-items {
   list-style: none;
@@ -22,9 +23,11 @@ html, body {
   padding-left: 1.5rem;
 }
 header {
+  color: white;
   font-family: 'Poppins', sans-serif;
 }
 .main {
+  color: white;
   font-family: 'Poppins', sans-serif;
   padding-left: 1.5rem;
   min-height: 100%;
@@ -33,6 +36,7 @@ header {
   font-size: 1.5rem;
 }
 .footer {
+  color: white;
   height: 50px;
   font-family: 'Poppins', sans-serif;
   padding-left: 1.5rem;
